--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   },
   "homepage": "https://github.com/yaoang/lucky-draw#readme",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.18.3",
+    "multer": "^1.4.5-lts.1",
+    "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "tsc": "^2.0.4"
   }
 }
