--- a/mss/server/package.json
+++ b/mss/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.3",
+    "json2csv": "^6.0.0-alpha.2",
     "multer": "^1.4.5-lts.1",
     "xls": "^0.5.1"
   },
